// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AgeType /> #getTextProps() still matches snapshot 1`] = `Object {}`;

exports[`<AgeType /> #handleSubmit() calls NODE_API_HELPERS.updateNode 1`] = `
Array [
  Array [
    Object {
      "0": "m",
      "1": "o",
      "2": "d",
      "3": "e",
      "4": "l",
      "nodeId": null,
      "onError": "onError",
      "onSuccess": "onSuccess",
    },
    Object {
      "id": null,
      "readOnly": false,
      "value": "value",
      "variant": null,
    },
  ],
]
`;

exports[`<AgeType /> #render() still matches snapshot 1`] = `
<WithStyles(GridItem)>
  <WithStyles(EditableSelectForm)
    inline={true}
    label={
      <FormattedMessage
        defaultMessage="Adult or Child"
        id="app.Node.parts.AgeType.editableLabel"
      />
    }
    name="node.customData.ageType"
    onSubmit={[Function]}
    options={
      Array [
        Object {
          "children": "Adult",
          "value": "Adult",
        },
        Object {
          "children": "Child",
          "value": "Child",
        },
      ]
    }
    placeholder="Click to specity Adult/Child"
    readOnly={false}
    value="value"
  />
</WithStyles(GridItem)>
`;

exports[`<AgeType /> #renderEditableInline() still matches snapshot 1`] = `
<WithStyles(GridItem)>
  <WithStyles(EditableTextForm)
    TextProps={Object {}}
    inline={true}
    label={
      <FormattedMessage
        defaultMessage="Adult or Child"
        id="app.Node.parts.AgeType.editableLabel"
      />
    }
    name="node.customData.ageType"
    onSubmit={[Function]}
    placeholder="Click to specity Adult/Child"
    readOnly={false}
    value="value"
  />
</WithStyles(GridItem)>
`;

exports[`<AgeType /> #renderTextField() still matches snapshot 1`] = `
<WithStyles(GridItem)
  xs={true}
>
  <Formsy(SelectField)
    disabled={false}
    innerRef={[Function]}
    label={
      <FormattedMessage
        defaultMessage="Adult or Child"
        id="app.Node.parts.AgeType.editableLabel"
      />
    }
    name="node.customData.ageType"
    options={
      Array [
        Object {
          "children": "Adult",
          "value": "Adult",
        },
        Object {
          "children": "Child",
          "value": "Child",
        },
      ]
    }
    required={false}
    validationError=""
    validationErrors={Object {}}
    validations={null}
    value="value"
  />
</WithStyles(GridItem)>
`;

exports[`<AgeType /> #renderTextField() still matches snapshot 2`] = `
<WithStyles(GridItem)
  xs={true}
>
  <Formsy(SelectField)
    disabled={false}
    innerRef={[Function]}
    label={
      <FormattedMessage
        defaultMessage="Adult or Child"
        id="app.Node.parts.AgeType.editableLabel"
      />
    }
    name="node.customData.ageType"
    options={
      Array [
        Object {
          "children": "Adult",
          "value": "Adult",
        },
        Object {
          "children": "Child",
          "value": "Child",
        },
      ]
    }
    required={false}
    validationError=""
    validationErrors={Object {}}
    validations={null}
    value="value"
  />
</WithStyles(GridItem)>
`;

exports[`<AgeType /> #renderTextOnly() still matches snapshot 1`] = `
<span>
  value
</span>
`;
